<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gosick"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paz.memorama.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp" >

        <Button
            android:id="@+id/reiniciar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:text="@string/jugar"
            android:textColor="#FFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp" >

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp" >

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="265dp" >

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton18"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton20"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="320dp" >

        <ImageButton
            android:id="@+id/imageButton21"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton22"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton23"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton24"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton25"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="375dp" >

        <ImageButton
            android:id="@+id/imageButton26"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton27"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton28"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton29"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/imageButton30"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@android:drawable/btn_star" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/tiempo"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="" 
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:layout_weight="0.25"
            android:text="@string/intentos" 
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:layout_weight="0.25"
            android:text="@string/intento" 
            android:textColor="#FFF"/>

    </LinearLayout>

</RelativeLayout>